# synology-decrypt

./: .gitignore  ALGORITHM.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
syndecrypt/: __main__.py  files.py  util.py
tests/: test_io.py
