[project]
name = "syndecrypt"
version = "0.1.0"
description = "Open source Python implementation of Synology NAS Cloud Sync encryption/decryption"
requires-python = ">=3.10"
dependencies = [
    "pycryptodomex>=3.20",
    "docopt==0.6.2",
]

[project.optional-dependencies]
dev = [
    "assertpy>=1.1",
    "pytest>=8.0",
    "coverage>=7.0",
    "codacy-coverage==1.3.2",
]
